Just to be sure that it won't screw me up again.

--- a/sonichq/megaman/images/display.cgi%3fdirectory%3dproart/megaman%26style%3dimages-characters%26title%3dMega Man and Friends/index.html
+++ b/sonichq/megaman/images/display.cgi%3fdirectory%3dproart/megaman%26style%3dimages-characters%26title%3dMega Man and Friends/index.html
@@ -3,30 +3,30 @@
 <head>
    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
    <title>Mega Man HQ - Download Gallery - Mega Man and Friends</title>
-<script src=http://www.sonichq.org/scripts/megaman-init.js></script>
+<script src=/sonichq/scripts/megaman-init.js></script>
 <style type="text/css">
 <!-- a:hover {text-decoration: underline}
 A{text-decoration:none} -->
 </style>
-<link rel=stylesheet href=/megaman/css/images-characters.css type="text/css">
+<link rel=stylesheet href=/sonichq/megaman/css/images-characters.css type="text/css">
 </head>
 
-<body text="#000000" bgcolor="white" alink="#0000FF" link=#0000FF vlink=#0000FF background="/megaman/images/backgrounds/mmgraybg.gif" bgproperties="fixed">
+<body text="#000000" bgcolor="white" alink="#0000FF" link=#0000FF vlink=#0000FF background="/sonichq/megaman/images/backgrounds/mmgraybg.gif" bgproperties="fixed">
 
 <span class=pathlinks><table class=glow>
-<a href=/megaman>Mega Man HQ</a> | <a href=/megaman/images>Download Gallery</a> | Mega Man and Friends
+<a href=/sonichq/megaman>Mega Man HQ</a> | <a href=/sonichq/megaman/images>Download Gallery</a> | Mega Man and Friends
 </table></span>
 
 <center><p><table width=70%><tr align=center><td>
 
 <p><table BORDER=0 CELLSPACING=0 CELLPADDING=0 WIDTH=100%>
-<tr><td width=19><img src=/topleft.gif width=19></td>
+<tr><td width=19><img src=/sonichq/topleft.gif width=19></td>
 
 <td bgcolor=black width=100%><center><font size=5 color=4B1FFC face=Verdana>
 <div class=title align=right>Mega Man and Friends</div>
 </font></center></td>
 
-<td width=19><img src=/topright.gif width=19></td></tr>
+<td width=19><img src=/sonichq/topright.gif width=19></td></tr>
 </table>
 
 <table BORDER=0 CELLSPACING=0 CELLPADDING=0 WIDTH=100% bgcolor=000000>
@@ -52,12 +52,12 @@ A{text-decoration:none} -->
 <table border=0 cellspacing=0 cellpadding=0 width=100%>
 <tr><td bgcolor=000000>&nbsp<br>&nbsp</td>
 <td rowspan=2 width=100% bgcolor=000000 valign=middle>
-<center><br><a href=/megaman><b>Back to Mega Man HQ Main</b></a><br>&nbsp</center></td>
+<center><br><a href=/sonichq/megaman><b>Back to Mega Man HQ Main</b></a><br>&nbsp</center></td>
 <td bgcolor=000000>&nbsp<br>&nbsp</td></tr>
 
 <tr valign=bottom>
-<td><img SRC="/bottomleft.gif" BORDER=0 height=20></td>
-<td><img SRC="/bottomright.gif" BORDER=0 height=20></td>
+<td><img SRC="/sonichq/bottomleft.gif" BORDER=0 height=20></td>
+<td><img SRC="/sonichq/bottomright.gif" BORDER=0 height=20></td>
 </tr>
 </table>
 
