--- a/sonichq/megaman/images/index.html
+++ b/sonichq/megaman/images/index.html
@@ -39,7 +39,7 @@ width:100%;
       <p><font color="#FFFFFF" size="2" face="Arial, Helvetica, sans-serif">Welcome 
         to the Mega Man HQ Downloads Page! Here you can find none other than downloads! 
         Betcha didn't know that!</p>
-      <p>Some images from <a href=http://www.protoman.com/ target=_blank>The Protoman Homepage</a> and <a href=http://www.ign.com target=_blank>IGN.COM</a></font>.</p>
+      <p>Some images from <a href=https://web.archive.org/20011101000000/http://www.protoman.com/ target=_blank>The Protoman Homepage</a> and <a href=https://web.archive.org/20011101000000/http://www.ign.com target=_blank>IGN.COM</a></font>.</p>
     </td>
     <td bgcolor="#1010A0"><font face="Arial, Helvetica, sans-serif"><b><font size="2"><a href="boxcover/">Box 
       Art</a></font></b></font></td>
@@ -94,11 +94,11 @@ width:100%;
 <center>
   <table border=0 cellspacing=0 cellpadding=0 width=90% class=maintable>
     <tr>
-      <td><img SRC="/bottomleft.gif" BORDER=0></td>
+      <td><img SRC="/sonichq/bottomleft.gif" BORDER=0></td>
 <td width=99% bgcolor=000000><font color="white" size=-3 face="arial"><center>
           Page is ©1996-2000 Sonic HQ. Mega Man & Co. are © Capcom. 
         </center></font></td>
-      <td><img SRC="/bottomright.gif" BORDER=0></td>
+      <td><img SRC="/sonichq/bottomright.gif" BORDER=0></td>
 </tr></table>
 </center>
 </body>
