--- a/sonichq/megaman/images/sprites/index.html
+++ b/sonichq/megaman/images/sprites/index.html
@@ -143,11 +143,11 @@ width:100%;
 <center>
   <table border=0 cellspacing=0 cellpadding=0 width=90% class=maintable>
     <tr>
-      <td><img SRC="/bottomleft.gif" BORDER=0></td>
+      <td><img SRC="/sonichq/bottomleft.gif" BORDER=0></td>
 <td width=99% bgcolor=000000><font color="white" size=-3 face="arial"><center>
           Page is ©1996-2000 Sonic HQ. Mega Man & Co. are © Capcom. 
         </center></font></td>
-      <td><img SRC="/bottomright.gif" BORDER=0></td>
+      <td><img SRC="/sonichq/bottomright.gif" BORDER=0></td>
 </tr></table>
 </center>
 </body>
