--- a/sonichq/megaman/images/proart/index.html
+++ b/sonichq/megaman/images/proart/index.html
@@ -3,18 +3,18 @@
 <head>
    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
    <title>Mega Man HQ - The MM Robot Museum</title>
-<script src=http://www.sonichq.org/scripts/megaman-init.js></script>
+<script src=/sonichq/scripts/megaman-init.js></script>
 <style type="text/css">
 <!-- a:hover {text-decoration: underline}
 A{text-decoration:none} -->
 </style>
-<link rel=stylesheet href=/megaman/css/images-characters.css type="text/css">
+<link rel=stylesheet href=/sonichq/megaman/css/images-characters.css type="text/css">
 </head>
 
-<body text="#000000" bgcolor="white" alink="#0000FF" link=#0000FF vlink=#0000FF background="/megaman/images/backgrounds/mmgraybg.gif" bgproperties="fixed">
+<body text="#000000" bgcolor="white" alink="#0000FF" link=#0000FF vlink=#0000FF background="/sonichq/megaman/images/backgrounds/mmgraybg.gif" bgproperties="fixed">
 
 <span class=pathlinks><table class=glow>
-<a href=/megaman>Mega Man HQ</a> | <a href=/megaman/images>Download Gallery</a> | Pro Art
+<a href=/sonichq/megaman>Mega Man HQ</a> | <a href=/sonichq/megaman/images>Download Gallery</a> | Pro Art
 </table></span>
 
 <center><p><table width=70%><tr align=center><td>
@@ -30,7 +30,7 @@ A{text-decoration:none} -->
 </table>
 
 <table BORDER=0 CELLSPACING=0 CELLPADDING=0 WIDTH=100% bgcolor=000000>
-<tr><td VALIGN=TOP height=49><center><img src=http://www.sonichq.org/images/bar1.gif></center></td></tr>
+<tr><td VALIGN=TOP height=49><center><img src=/sonichq/images/bar1.gif></center></td></tr>
 </table>
 
 <table BORDER=2 bordercolor=black CELLSPACING=0 CELLPADDING=3 WIDTH=100%>
@@ -48,7 +48,7 @@ Welcome to the Pro Art page! For all your Professional Art needs! Here you can f
 <table border=0 cellspacing=0 cellpadding=0 width=100%>
 <tr><td bgcolor=000000>&nbsp<br>&nbsp</td>
 <td rowspan=2 width=100% bgcolor=000000 valign=middle>
-<center><br><a href=/megaman><b>Back to Mega Man HQ Main</b></a><br>&nbsp</center></td>
+<center><br><a href=/sonichq/megaman><b>Back to Mega Man HQ Main</b></a><br>&nbsp</center></td>
 <td bgcolor=000000>&nbsp<br>&nbsp</td></tr>
 
 <tr valign=bottom>
