--- a/sonichq/megaman/features/updateboard.html
+++ b/sonichq/megaman/features/updateboard.html
@@ -12,7 +12,7 @@ A{text-decoration:none}
 .updatetitle {background-color:#595959; width:100%; align:center; font-size:16; font-weight:bold; color:white;}
 -->
 </style>
-<base href=http://www.sonichq.org/megaman/>
+<base href=/sonichq/megaman>
 </head>
 
 <body text="#000000" bgcolor="#FFFFFF" link="#FFA500" vlink="#ffa500" background="images/backgrounds/TailsGrayBG.gif">
@@ -39,7 +39,7 @@ A{text-decoration:none}
 This board is for various HQ announcements and updates.  Not all updates are listed here - that's what the dates on the main page are for.  However, when an update requieres additional explanation, you can find it here.<br>
 Thanks for your patience!
 </blockquote>
-<center><b><p><a href="/" target="_top"><font face=arial>Return To The Main Page?</a></b></center>
+<center><b><p><a href="/sonichq/" target="_top"><font face=arial>Return To The Main Page?</a></b></center>
 <br clear=right>
 
 <font face=Arial size=-1>
@@ -67,7 +67,7 @@ Thanks for your patience!
 
 <div class=updatetitle align=center>April 8, 2001</div>
 
-<b><a href="http://www.sonichq.org/megaman/fanfair/">Fan Fair</a></b> - More stuff from Patty! New <a href="http://www.sonichq.org/megaman/fanfair/fancomics/rmchibiadv/">"Rockman no Chibi Adventure"</a> comics and new fan art pics.<p>
+<b><a href="/sonichq/megaman/fanfair/">Fan Fair</a></b> - More stuff from Patty! New <a href="/sonichq/megaman/fanfair/fancomics/rmchibiadv/">"Rockman no Chibi Adventure"</a> comics and new fan art pics.<p>
 
 <div class=updatetitle align=center>April 4, 2001</div>
 
@@ -97,13 +97,13 @@ Thanks for your patience!
 
 <div class=updatetitle align=center>January 19, 2001</div>
 
-<b><a href="http://www.sonichq.org/megaman/fanfair/fancomics/rmchibiadv/">Fan Comics</a></b> - We've got comic strips! Check out Patty's "The Chibi Adventures of Rockman", and she's got more on the way. :D I love them, Patty! ^_^<p>
+<b><a href="/sonichq/megaman/fanfair/fancomics/rmchibiadv/">Fan Comics</a></b> - We've got comic strips! Check out Patty's "The Chibi Adventures of Rockman", and she's got more on the way. :D I love them, Patty! ^_^<p>
 
 <div class=updatetitle align=center>January 4, 2K1</div>
 
-<b><a href="http://www.sonichq.org/megaman/fanfair/fanart/">Fan Art</a></b> - Oh yeah, another note, Tony the Cuckooguy's fan art is up too, it has been up actually, it just kinda got lost for a while, but I found it. ;)<p>
+<b><a href="/sonichq/megaman/fanfair/fanart/">Fan Art</a></b> - Oh yeah, another note, Tony the Cuckooguy's fan art is up too, it has been up actually, it just kinda got lost for a while, but I found it. ;)<p>
 
-<b><a href="http://www.sonichq.org/megaman/fanfair/fanart/">Fan Art</a></b> - Fan art, fan art, more fan art! Hi, it's Jazz and I've put up my pal's kawaii pictures! Thanks, Patty!<p>
+<b><a href="/sonichq/megaman/fanfair/fanart/">Fan Art</a></b> - Fan art, fan art, more fan art! Hi, it's Jazz and I've put up my pal's kawaii pictures! Thanks, Patty!<p>
 
 <div class=updatetitle align=center>December 26, 2000<a href=directory.php3>Directory</a></div>
 
