--- a/sonichq/megaman/fanfair/fancomics/rmchibiadv/index.html
+++ b/sonichq/megaman/fanfair/fancomics/rmchibiadv/index.html
@@ -1,19 +1,19 @@
 <html>
 <head>
 <title>Mega Man HQ: Fan Fair</title>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1"><link rel=stylesheet url=http://www.sonichq.org/megaman/css/main.css>
+<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1"><link rel=stylesheet url=/sonichq/megaman/css/main.css>
 </head>
 
-<body bgcolor="#FFFFFF" background="http://www.sonichq.org/megaman/images/backgrounds/forte1bg.gif">
+<body bgcolor="#FFFFFF" background="/sonichq/megaman/images/backgrounds/forte1bg.gif">
 <p>
 <p><a href="../../../"><font face="verdana" size="2">Mega Man HQ</font></a><font face="verdana" size="2"> 
   | <a href="../../">Fan Fair</a> | <a href="../">Fan Comics</a></font></p>
 <div align="center">
   <table border=0 cellspacing=0 cellpadding=0 width="60%" class=maintable>
     <tr> 
-      <td width=19><img src=/topleft.gif width=19></td>
+      <td width=19><img src=/sonichq/topleft.gif width=19></td>
       <td bgcolor=black width=100% height=50 valign=middle>&nbsp;</td>
-      <td width=19><img src=/topright.gif width=19></td>
+      <td width=19><img src=/sonichq/topright.gif width=19></td>
     </tr>
   </table>
   <table border=0 cellspacing=0 cellpadding=0 width=100% class=maintable>
@@ -65,13 +65,13 @@
   </table>
   <table border=0 cellspacing=0 cellpadding=0 width=60% class=maintable>
     <tr> 
-      <td><img src="/bottomleft.gif" border=0 height=20></td>
+      <td><img src="/sonichq/bottomleft.gif" border=0 height=20></td>
       <td width=99% bgcolor=000000><font color="white" size=-3 face="arial"> 
         <center>
           Page is ©1996-2000 Sonic HQ. Mega Man & Co. are © Capcom. 
         </center>
         </font></td>
-      <td><img src="/bottomright.gif" border=0 height=20></td>
+      <td><img src="/sonichq/bottomright.gif" border=0 height=20></td>
     </tr>
   </table>
 </div>
