This was probably the easiest file to do.

--- a/sonichq/qa/FAQ.htm
+++ b/sonichq/qa/FAQ.htm
@@ -12,7 +12,7 @@
 
 <p align=center><table width=100% border=1 cellspacing=0 bordercolorlight=blue bordercolordark=23238E>
 <tr>
-<td><center><img src="http://www.emulationzone.org/sonichq/qa/qatop.jpg" align=left alt="Sonic Q&A Logo"></center></td>
+<td><center><img src="/sonichq/emuzone/qa/qatop.jpg" align=left alt="Sonic Q&A Logo"></center></td>
 <td>
 <center><font face="Verdana" size=-1>
 Welcome to the <b>FAQ</b> section of <font color="orange">Sonic HQ's</font> <b>Q&A</b> Page! This is where you can find answers to common Sonic questions. Please read these answers before sending your question to <a href="mailto:sonichq@yahoo.com">Q&A.</a>  You might find the answer here instead.
@@ -61,7 +61,7 @@ Anchor links were added.
 
 <!-- SONIC EXCHANGE-->
 <font color="4B1FFC">
-<P ALIGN=CENTER><A HREF="http://www.p-a-u-l.com/sonic/banex/" target="whole"><IMG SRC="http://www.p-a-u-l.com/sonic/banex/selogo.gif" HEIGHT=40 WIDTH=40 ALT="Sonic Exchange - Sonic The Hedgehog Banner Exchange!"></A><A HREF="http://www.p-a-u-l.com/cgi-bin/ads.pl?advert=NonSSI&page=03" target="whole"><IMG SRC="http://www.p-a-u-l.com/cgi-bin/ads.pl?ID=sonichq&page=03" HEIGHT=40 WIDTH=400 ALT="Sonic Exchange - Sonic The Hedgehog Banner Exchange!"></A><BR><SMALL><A HREF="http://www.p-a-u-l.com/sonic/banex/">Sonic Exchange - Sonic The Hedgehog Banner Exchange!</A></SMALL></P> 
+<P ALIGN=CENTER><A HREF="https://web.archive.org/20011101000000/http://www.p-a-u-l.com/sonic/banex/" target="whole"><IMG SRC="https://web.archive.org/20011101000000/http://www.p-a-u-l.com/sonic/banex/selogo.gif" HEIGHT=40 WIDTH=40 ALT="Sonic Exchange - Sonic The Hedgehog Banner Exchange!"></A><A HREF="https://web.archive.org/20011101000000/http://www.p-a-u-l.com/cgi-bin/ads.pl?advert=NonSSI&page=03" target="whole"><IMG SRC="https://web.archive.org/20011101000000/http://www.p-a-u-l.com/cgi-bin/ads.pl?ID=sonichq&page=03" HEIGHT=40 WIDTH=400 ALT="Sonic Exchange - Sonic The Hedgehog Banner Exchange!"></A><BR><SMALL><A HREF="https://web.archive.org/20011101000000/http://www.p-a-u-l.com/sonic/banex/">Sonic Exchange - Sonic The Hedgehog Banner Exchange!</A></SMALL></P> 
 </font>
 <!-- END SONIC EXCHANGE -->
 
@@ -85,8 +85,8 @@ How can I get to the Hidden Palace Zone in Sonic 2?  Or the Wood Zone, or the Ne
 </font>
 <p>
 The Hidden Palace Zone is the most famous of several zones that were removed from Sonic 2.  It was apparently removed late in Sonic 2's development, because it appeared often in gaming magazines and promotions before the game was released.  We don't really know why the zones were taken out, but it probably had to do with keeping the game on schedule or saving cartridge space.<p>
-There should soon be info about them on the Gaming Info page (might even be there as you're reading this).  Another source is <a href="http://www.emulationzone.org/sections/sonic/secret/" target="whole">Secrets of Sonic the Hedgehog.</a>  Pro Action Replay stuff and other hacks for playing Hidden Palace can be found at <a href=http://www.angelfire.com/sc/SonicTheHedge/ target=whole>Tom's Sonic and NiGHTS Page.</a><p>
-<a href=http://www.ellensburg.com/~katharin/index2.html target=whole>SonicLand</a> has all the info I have been able to find on the net about Sonic Arcade.
+There should soon be info about them on the Gaming Info page (might even be there as you're reading this).  Another source is <a href="https://web.archive.org/20011101000000/http://www.emulationzone.org/sections/sonic/secret/" target="whole">Secrets of Sonic the Hedgehog.</a>  Pro Action Replay stuff and other hacks for playing Hidden Palace can be found at <a href=https://web.archive.org/20011101000000/http://www.angelfire.com/sc/SonicTheHedge/ target=whole>Tom's Sonic and NiGHTS Page.</a><p>
+<a href=https://web.archive.org/20011101000000/http://www.ellensburg.com/~katharin/index2.html target=whole>SonicLand</a> has all the info I have been able to find on the net about Sonic Arcade.
 </font></td></table>
 
 <a name=musiccds>
@@ -98,11 +98,11 @@ Where can I get Sonic Music CDs?
 </font>
 <p>Thanks to <a href="mailto:mightyray@earthlink.net">Ray</a> for this info.<p>
 
-The Sonic Adventure Original Soundtrack (2 CDs, 69 tracks) can be found at <a href=http://www.gamecave.com>Game Cave</a> for $32.99!<p>
+The Sonic Adventure Original Soundtrack (2 CDs, 69 tracks) can be found at <a href=https://web.archive.org/20011101000000/http://www.gamecave.com>Game Cave</a> for $32.99!<p>
 
-The Sonic Adventure "Songs With Attitude" CD (the character themes) is for sale at <a href=http://www.gamemusic.com>Game Music Online</a> for $28.99.<p>
+The Sonic Adventure "Songs With Attitude" CD (the character themes) is for sale at <a href=https://web.archive.org/20011101000000/http://www.gamemusic.com>Game Music Online</a> for $28.99.<p>
 
-Virtual Sonic is available for $5.97 at <a href=http://www.cdnow.com>CDNow</a>.<p>
+Virtual Sonic is available for $5.97 at <a href=https://web.archive.org/20011101000000/http://www.cdnow.com>CDNow</a>.<p>
 
 Info for other CDs coming soon.
 </font></td></table>
@@ -122,9 +122,9 @@ Where can see the Sonic cartoons or get videos of them?
 
 <p>An English-translated Sonic Anime is supposed to come out in September.  We do have reports of one person buying it in Michigan, but the company that is making the video says September.
 
-<p>You can get RealVideo versions of SatAM at <a href=http://www.sirnex.com target=whole>Sir NEXCOM</a>, <a href="http://starhedgehog.simplenet.com" target="whole">Star Hedgehog's Page</a>, or <a href="http://members.spree.com/SIP/soneec/" target="whole">Sonic Pandemonium</a>.  Star Hedgehog also has the Sonic Anime. <a href=http://segasonic.simplenet.com>SegaSonic.Net</a> has the AoStH videos.
+<p>You can get RealVideo versions of SatAM at <a href=https://web.archive.org/20011101000000/http://www.sirnex.com target=whole>Sir NEXCOM</a>, <a href="https://web.archive.org/20011101000000/http://starhedgehog.simplenet.com" target="whole">Star Hedgehog's Page</a>, or <a href="https://web.archive.org/20011101000000/http://members.spree.com/SIP/soneec/" target="whole">Sonic Pandemonium</a>.  Star Hedgehog also has the Sonic Anime. <a href=https://web.archive.org/20011101000000/http://segasonic.simplenet.com>SegaSonic.Net</a> has the AoStH videos.
 
-<p><a href=http://members.xoom.com/SonicTheHedg/>Tom's Sonic and NiGHTS Page</a> has a ton of Sonic Underground pics, sounds, and episode summaries.
+<p><a href=https://web.archive.org/20011101000000/http://members.xoom.com/SonicTheHedg/>Tom's Sonic and NiGHTS Page</a> has a ton of Sonic Underground pics, sounds, and episode summaries.
 
 <p>Please be aware that we don't run these sites and that the videos may occasionally become temporarily unavailable.  If you have a problem, try again later.
 </font></td></table>
@@ -184,7 +184,7 @@ The most popular theory is that the Power Rangers drove Sonic's ratings down.  A
 I read something about a 3rd season for SatAM.  Can you give me information about it?
 </font>
 <p>
-You can find out more info on the cancelled 3rd season on the <a href="http://www.sonichq.org/cartoon/" target="whole">Cartoon Info Page</a>.  In short, the red eyes seen in the 2nd season finale belonged to Naugus, who would soon take over Robotropolis and make Robotnik his Snively-like assistant.  Snively would be kicked out and join the Freedom Fighters.  I think that Snively becoming a Freedom Fighter would have led to some very interesting situations and plenty of chances for character development.
+You can find out more info on the cancelled 3rd season on the <a href="/sonichq/cartoon/" target="whole">Cartoon Info Page</a>.  In short, the red eyes seen in the 2nd season finale belonged to Naugus, who would soon take over Robotropolis and make Robotnik his Snively-like assistant.  Snively would be kicked out and join the Freedom Fighters.  I think that Snively becoming a Freedom Fighter would have led to some very interesting situations and plenty of chances for character development.
 </font></td></table>
 
 <a name=dcrelease>
