--- a/japan/SonicChannelOld/index.html
+++ b/japan/SonicChannelOld/index.html
@@ -74,9 +74,9 @@
 		<div class="fistchild">
 			<p class="newsImage"><a href="topics/sound/150624/index.html"><img src="pastdata/2012/image/fig_news_0426.gif" alt="Topics" width="50" height="50" border="0"></a></p>
 			<h3><span>2015/06/24</span><br />
-				「ソニック チャンネル」更新！</h3>
+				"Sonic Channel" updated!</h3>
 			<ul>
-				<li>[<a href="topics/sound/150624/index.html">トピックス/サウンド情報</a>]：「ソニック ランナーズ オリジナルサウンドトラック Vol.1」楽曲配信！！</li>
+				<li>[<a href="topics/sound/150624/index.html">Topics/Sound Information</a>]："Sonic Runners Original Soundtrack Vol.1" Music Distribution!</li>
 			</ul>
 		</div>
 		<div>
