Adding more japanese files.

--- a/japan/SonicChannelOld/index.html
+++ b/japan/SonicChannelOld/index.html
@@ -76,16 +76,16 @@
 			<h3><span>2015/06/24</span><br />
 				"Sonic Channel" updated!</h3>
 			<ul>
-				<li>[<a href="topics/sound/150624/index.html">Topics/Sound Information</a>]："Sonic Runners Original Soundtrack Vol.1" Music Distribution!</li>
+				<li>[<a href="topics/sound/150624/index.html">Topics/Sound Information</a>]: "Sonic Runners Original Soundtrack Vol.1" Music distribution!</li>
 			</ul>
 		</div>
 		<div>
-			<p class="newsImage"><a href="../SonicToon/FireIce/index.html"><img src="pastdata/2015/image/fig_news_0622.jpg" alt="ソニックトゥーン ファイアー＆アイス" width="50" height="50" border="0"></a></p>
+			<p class="newsImage"><a href="../SonicToon/FireIce/index.html"><img src="pastdata/2015/image/fig_news_0622.jpg" alt="Sonic Boom: Fire & Ice" width="50" height="50" border="0"></a></p>
 			<h3><span>2015/06/22</span><br />
-				「ソニック チャンネル」更新！</h3>
+				"Sonic Channel" updated!</h3>
 			<ul>
-				<li>[<a href="fanart/apply/index.html">ファンアート</a>]：2015年8月掲載分のテーマは<strong>「夏休み」</strong>！&nbsp;応募締め切りは<strong class="txtRed">8月掲載分　7/21（火）まで</strong></li><br />
-				<li><a href="../SonicToon/FireIce/index.html">『ソニックトゥーン ファイアー＆アイス』</a>公式サイト公開！</li>
+				<li>[<a href="fanart/apply/index.html">Fan Art</a>]: The theme for the August 2015 publication is <strong>"Summer Vacation"</strong>!&nbsp;Application deadline is<strong class="txtRed"> Tuesday, July 21 for August issue</strong>.</li><br />
+				<li><a href="../SonicToon/FireIce/index.html">"Sonic Boom: Fire & Ice"</a> Official site opened!</li>
 			</ul>
 		</div>
 		<div>
