--- a/sonichq/images/display.cgi%3fdirectory%3dscreenshots/sonicadventure2%26title%3dSonic Adventure 2/index.html
+++ b/sonichq/images/display.cgi%3fdirectory%3dscreenshots/sonicadventure2%26title%3dSonic Adventure 2/index.html
@@ -127,10 +127,29 @@ Sonic Adventure 2
 <tr align=center>
 <td><a href=screenshots/sonicadventure2/screenshot60.jpg><img src=screenshots/sonicadventure2/thumbnails/screenshot60.jpg border=0></a></td>
 <td><a href=screenshots/sonicadventure2/screenshot61.jpg><img src=screenshots/sonicadventure2/thumbnails/screenshot61.jpg border=0></a></td>
-<td><a href=screenshots/sonicadventure2/screenshot7.jpg><img src=screenshots/sonicadventure2/thumbnails/screenshot7.jpg border=0></a></td>
-<td><a href=screenshots/sonicadventure2/screenshot8.jpg><img src=screenshots/sonicadventure2/thumbnails/screenshot8.jpg border=0></a></td>
+<td><a href=screenshots/sonicadventure2/screenshot62.jpg><img src=screenshots/sonicadventure2/thumbnails/screenshot62.jpg border=0></a></td>
+<td><a href=screenshots/sonicadventure2/screenshot63.jpg><img src=screenshots/sonicadventure2/thumbnails/screenshot63.jpg border=0></a></td>
 </tr>
 <tr align=center>
+<td><a href=screenshots/sonicadventure2/screenshot64.jpg><img src=screenshots/sonicadventure2/thumbnails/screenshot64.jpg border=0></a></td>
+<td><a href=screenshots/sonicadventure2/screenshot65.jpg><img src=screenshots/sonicadventure2/thumbnails/screenshot65.jpg border=0></a></td>
+<td><a href=screenshots/sonicadventure2/screenshot66.jpg><img src=screenshots/sonicadventure2/thumbnails/screenshot66.jpg border=0></a></td>
+<td><a href=screenshots/sonicadventure2/screenshot67.jpg><img src=screenshots/sonicadventure2/thumbnails/screenshot67.jpg border=0></a></td>
+</tr>
+<tr align=center>
+<td><a href=screenshots/sonicadventure2/screenshot68.jpg><img src=screenshots/sonicadventure2/thumbnails/screenshot68.jpg border=0></a></td>
+<td><a href=screenshots/sonicadventure2/screenshot69.jpg><img src=screenshots/sonicadventure2/thumbnails/screenshot69.jpg border=0></a></td>
+<td><a href=screenshots/sonicadventure2/screenshot7.jpg><img src=screenshots/sonicadventure2/thumbnails/screenshot7.jpg border=0></a></td>
+<td><a href=screenshots/sonicadventure2/screenshot70.jpg><img src=screenshots/sonicadventure2/thumbnails/screenshot70.jpg border=0></a></td>
+</tr>
+<tr align=center>
+<td><a href=screenshots/sonicadventure2/screenshot71.jpg><img src=screenshots/sonicadventure2/thumbnails/screenshot71.jpg border=0></a></td>
+<td><a href=screenshots/sonicadventure2/screenshot72.jpg><img src=screenshots/sonicadventure2/thumbnails/screenshot72.jpg border=0></a></td>
+<td><a href=screenshots/sonicadventure2/screenshot73.jpg><img src=screenshots/sonicadventure2/thumbnails/screenshot73.jpg border=0></a></td>
+<td><a href=screenshots/sonicadventure2/screenshot74.jpg><img src=screenshots/sonicadventure2/thumbnails/screenshot74.jpg border=0></a></td>
+</tr>
+<tr align=center>
+<td><a href=screenshots/sonicadventure2/screenshot8.jpg><img src=screenshots/sonicadventure2/thumbnails/screenshot8.jpg border=0></a></td>
 <td><a href=screenshots/sonicadventure2/screenshot9.jpg><img src=screenshots/sonicadventure2/thumbnails/screenshot9.jpg border=0></a></td>
 
 
