--- a/sonichq/comics/scans/miniseries.html
+++ b/sonichq/comics/scans/miniseries.html
@@ -130,7 +130,7 @@ alt="Princess Sally #2 (Miniseries)"width=134 height=208></A>
 alt="Princess Sally #3 (Miniseries)"width=134 height=208></A>
 </TD>
 <TD>
-<A HREF="/sonichq/comics/images/covers/mini-series/large/tls.jpg">
+<A HREF="/sonichq/comics/images/covers/mini-series/large/tls1.jpg">
 <IMG SRC="/sonichq/comics/images/covers/mini-series/thumbnails/tls1.jpg" 
 alt="Tails The Fox #1 (Miniseries)" width=134 height=208></A>
 </TD>
@@ -182,8 +182,8 @@ alt="Sonic's Friendly Nemesis: Knuckles #2 (Miniseries)" width=134 height=208></
 alt="Sonic's Friendly Nemesis: Knuckles #3 (Miniseries)" width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="/sonichq/comics/images/covers/mini-series/large/sds3.jpg">
-<IMG SRC="/sonichq/comics/images/covers/mini-series/thumbnails/sds3.jpg" 
+<A HREF="/sonichq/comics/images/covers/mini-series/large/sds1.jpg">
+<IMG SRC="/sonichq/comics/images/covers/mini-series/thumbnails/sds1.jpg" 
 alt="Sonic Quest: The Death Egg Saga #1" width=134 height=208></A>
 </TD>
 </TR>
@@ -208,14 +208,14 @@ alt="Sonic Quest: The Death Egg Saga #1" width=134 height=208></A>
 
 <TR>
 <TD>
-<A HREF="/sonichq/comics/images/covers/mini-series/large/sds3.jpg">
-<IMG SRC="/sonichq/comics/images/covers/mini-series/thumbnails/sds3.jpg" 
+<A HREF="/sonichq/comics/images/covers/mini-series/large/sds2.jpg">
+<IMG SRC="/sonichq/comics/images/covers/mini-series/thumbnails/sds2.jpg" 
 alt="Sonic Quest: The Death Egg Saga #2" width=134 height=208></A>
 </TD>
 <TD><center>
 <center>
-<A HREF="/sonichq/comics/images/covers/mini-series/large/sds1.jpg">
-<IMG SRC="/sonichq/comics/images/covers/mini-series/thumbnails/sds1.jpg" 
+<A HREF="/sonichq/comics/images/covers/mini-series/large/sds3.jpg">
+<IMG SRC="/sonichq/comics/images/covers/mini-series/thumbnails/sds3.jpg" 
 alt="Sonic Quest: The Death Egg Saga #3" width=134 height=208></A>
 </TD>
 <TD><center>
@@ -229,10 +229,10 @@ alt="Sonic And Knuckles: A Halloween Tale" width=134 height=208></A>
 alt="CSN Giveaway: Turnabout Heroes" width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="/sonichq/comics/images/covers/giveaways/large/hsuandchan.jpg">
+<A HREF="/sonichq/comics/images/covers/giveaways/large/hsunchan.jpg">
 <IMG SRC="/sonichq/comics/images/covers/giveaways/thumbnails/hsuandchan.jpg" 
 alt="EGM: Hsu And Chan" width=134 height=208></A>
 </TD>
 </TR>
 
-</TABLE>
+</TABLE><br></body></html>
