--- a/sonichq/comics/scans/sonic26-50.html
+++ b/sonichq/comics/scans/sonic26-50.html
@@ -14,7 +14,7 @@
   | <a href="specials.html">Specials</a> | <a href="fleetway1-25.html">Fleetway</a> | <a href="triple.html">Collages</a> | <a href="miniseries.html">Miniseries</a><br>
   </font></b></font>
 <font color="#CCCCCC"><font face="Arial, Helvetica, sans-serif" size="2"><a href="sonic1-25.html"><b>1-25</b></a><b>
-  | 26-50 | <a href="sonic51-75.html">51-75</a> | <a href="sonic76-100.html">76-100</a><br><br>
+  | 26-50 | <a href="sonic51-75.html">51-75</a> | <a href="sonic76-100.html">76-100</a> | <a href="sonic101-125.html">101-125</a><br><br>
   </font></b></font>
 
 
@@ -96,7 +96,7 @@ alt="Sonic The Hedgehog #29"width=134 height=208></A>
 <IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic30.jpg" 
 alt="Sonic The Hedgehog #30"width=134 height=208></A>
 </TD>
-
+</tr>
 <TR ALIGN=CENTER>
 <TD>
 <font size=2 face=arial><b>Sonic #31</font>
@@ -141,7 +141,7 @@ alt="Sonic The Hedgehog #34"width=134 height=208></A>
 <IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic35.jpg" 
 alt="Sonic The Hedgehog #35"width=134 height=208></A>
 </TD>
-
+</tr>
 <TR ALIGN=CENTER>
 <TD>
 <font size=2 face=arial><b>Sonic #36</font>
@@ -186,7 +186,7 @@ alt="Sonic The Hedgehog #39"width=134 height=208></A>
 <IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic40.jpg" 
 alt="Sonic The Hedgehog #40"width=134 height=208></A>
 </TD>
-
+</tr>
 <TR ALIGN=CENTER>
 <TD>
 <font size=2 face=arial><b>Sonic #41</font>
@@ -231,7 +231,7 @@ alt="Sonic The Hedgehog #44"width=134 height=208></A>
 <IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic45.jpg" 
 alt="Sonic The Hedgehog #45"width=134 height=208></A>
 </TD>
-
+</tr>
 
 <TR ALIGN=CENTER>
 <TD>
@@ -277,6 +277,6 @@ alt="Sonic The Hedgehog #49"width=134 height=208></A>
 <IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic50.jpg" 
 alt="Sonic The Hedgehog #50"width=134 height=208></A>
 </TD>
-
-
-</TR></TABLE>
+</TR>
+</TABLE><br><p>
+</body></html>
