--- a/sonichq/comics/scans/specials.html
+++ b/sonichq/comics/scans/specials.html
@@ -105,7 +105,7 @@ alt="Super Sonic VS Hyper Knuckles"width=134 height=208></A>
 <font size=2 face=arial><b>Sonic 3D Blast</font>
 </TD>
 <TD>
-<font size=2 face=arial><b>Super Special #1: Battle Royal</font>
+<font size=2 face=arial><b>Super Special #1: Sonic VS Knuckles: Battle Royal</font>
 </TD>
 <TD>
 <font size=2 face=arial><b>Super Special #2: Brave New World</font>
@@ -141,7 +141,7 @@ alt="Sonic The Hedgehog: Brave New World"width=134 height=208></A>
 
 <TR ALIGN=CENTER>
 <TD>
-<font size=2 face=arial><b>Super Special #3: Sonic Firsts (Trade Paperback)</font>
+<font size=2 face=arial><b>Sonic Firsts (Trade Paperback)</font>
 </TD>
 <TD>
 <font size=2 face=arial><b>Super Special #3: Sonic Firsts</font>
@@ -215,7 +215,7 @@ alt="The Parallel Paradigm"width=134 height=208></A>
 alt="Pretty Soldier Sally Moon"width=134 height=208></A>
 </TD>
 <TD>
-<A HREF="/sonichq/comics/images/covers/specials/large/sss9.hpg">
+<A HREF="/sonichq/comics/images/covers/specials/large/sss9.jpg">
 <IMG SRC="/sonichq/comics/images/covers/specials/thumbnails/sss9.jpg" 
 alt="Sonic Kids - Take Two"width=134 height=208></A>
 </TD>
